<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
  <string name="app_name">OriginsOfFoodNames</string>
  <string name="title">Food Etymology Quiz</string>
  <string name="introduction">Names of foods can be frequently traced back to where the foods themselves natively originated, but not always.</string>
  <string name="subtitle_quiz">Good luck, <xliff:g name="user_name">%s</xliff:g>!</string>
  <string name="subtitle_results">Detailed report for <xliff:g name="user_name">%s</xliff:g></string>
  <string name="food_etymology_quiz">Food Etymology Quiz</string>
  <string name="subtitle_welcome_screen">Which Romance language gave rise to \"zucchini\" and other questions</string>
  <string name="submit">Submit</string>
  <string name="check_score">Check Score</string>
  <string name="view_results">View Detailed Results</string>
  <string name="reset_answers">Reset Answers</string>
  <string name="retake_quiz">Retake Quiz</string>
  <string name="answers_title">Answers</string>
  <string name="answers_subtitle">Placeholder for subtitle</string>
  <string name="question_1">MANGO came from this Asian language. Which one?</string>
  <string name="question_2">From which languages did COFFEE originate?\n(Check all that apply)</string>
  <string name="question_3">Which ancient language gave birth to BASIL?</string>
  <string name="question_4">ONION originated in this language. Which one?</string>
  <string name="question_5">Which Romance language gave rise to ZUCCHINI?</string>
  <string name="question_6">TOMATO originated in this language. Which one?</string>
  <string name="question_7">Which extinct language gave us CASHEW?</string>
  <string name="question_8">CHEESE, queso, cacio all come from which language?</string>
  <string name="question_9">The MACADAMIA nut is named after a secretary of the Victoria Philosophical Institute, Australia. His name is John _______. </string>
  <string name="question_10">From which languages did SPINACH originate?\n(Check all that apply)</string>
  <string name="food_name_1">MANGO</string>
  <string name="food_name_2">COFFEE</string>
  <string name="food_name_3">BASIL</string>
  <string name="food_name_4">ONION</string>
  <string name="food_name_5">ZUCCHINI</string>
  <string name="food_name_6">TOMATO</string>
  <string name="food_name_7">CASHEW</string>
  <string name="food_name_8">CHEESE</string>
  <string name="food_name_9">MACADAMIA</string>
  <string name="food_name_10">SPINACH</string>
  <string name="q1_option1">Mandarin</string>
  <string name="q1_option2">Tamil</string>
  <string name="q1_option3">Vietnamese</string>
  <string name="q1_option4">Japanese</string>
  <string name="q2_option1">Turkish</string>
  <string name="q2_option2">Arabic</string>
  <string name="q2_option3">Italian</string>
  <string name="q2_option4">French</string>
  <string name="q3_option1">Option 2</string>
  <string name="q3_option2">Option 2</string>
  <string name="q3_option3">Option 3</string>
  <string name="q3_option4">Option 4</string>
  <string name="q4_option1">French</string>
  <string name="q4_option2">Latin</string>
  <string name="q4_option3">Greek</string>
  <string name="q4_option4">Turkish</string>
  <string name="q5_option1">Option 1</string>
  <string name="q5_option2">Option 2</string>
  <string name="q5_option3">Option 3</string>
  <string name="q5_option4">Option 4</string>
  <string name="q6_option1">Italian</string>
  <string name="q6_option2">Spanish</string>
  <string name="q6_option3">Portuguese</string>
  <string name="q6_option4">Nahuatl</string>
  <string name="q7_option1">Sicel</string>
  <string name="q7_option2">Arwi</string>
  <string name="q7_option3">Tupi</string>
  <string name="q7_option4">Kwadi</string>
  <string name="q8_option1">Latin</string>
  <string name="q8_option2">Arabic</string>
  <string name="q8_option3">Portguese</string>
  <string name="q8_option4">Icelandic</string>
  <string name="q9_option1">Option 1</string>
  <string name="q9_option2">Option 2</string>
  <string name="q9_option3">Option 3</string>
  <string name="q9_option4">Option 4</string>
  <string name="q10_option1">Welsh</string>
  <string name="q10_option2">Catalan</string>
  <string name="q10_option3">Persian</string>
  <string name="q10_option4">Arabic</string>
  <string name="q1_answer">Correct answer: Tamil</string>
  <string name="q2_answer">Correct answer: Turkish, Arabic, Italian</string>
  <string name="q3_answer">Correct answer: Greek</string>
  <string name="q4_answer">Correct answer: Latin</string>
  <string name="q5_answer">Correct answer: Italian</string>
  <string name="q6_answer">Correct answer: Nahuatl</string>
  <string name="q7_answer">Correct answer: Tupi</string>
  <string name="q8_answer">Correct answer: Latin</string>
  <string name="q9_answer">Correct answer: Macadam</string>
  <string name="q10_answer">Correct answer: Catalan, Arabic, Persian</string>
  <string name="q1_etymology_detail">1580s, from Portuguese <i>manga</i>, from Malay (Austronesian) <i>mangga</i>, from Tamil (Dravidian) <i>mankay</i>, from <i>man</i>\"mango tree\" + <i>kay</i> \"fruit\"</string>
  <string name="q2_etymology_detail">c.1600, from Italian <i>caffe</i>, from Turkish <i>kahveh</i>, from Arabic <i>qahwah</i>\"coffee,\" said originally to have meant \"wine,\" but perhaps rather from Kaffa region of Ethiopia, a home of the plant (coffee in Kaffa is called <i>buno</i>, which was borrowed into Arabic as <i>bunn</i> \"raw coffee\")</string>
  <string name="q3_etymology_detail">early 15c., from Old French <i>basile</i>(15c., Modern French <i>basilic</i>), from Medieval Latin <i>basilicum</i>, from Greek <i>basilikon</i> (phyton) \"royal (plant),\" from basileus \"king\" (see Basil). So called, probably, because it was believed to have been used in making royal perfumes.</string>
  <string name="q4_etymology_detail">early 12c., from Anglo-French <i>union</i>, Old French <i>oignon</i>\"onion\" (formerly also <i>oingnon</i>), and directly from Latin <i>unionem</i> (nominative <i>unio</i> ), colloquial rustic Roman for \"a kind of onion,\" also \"pearl\" (via notion of a string of onions), literally \"one, unity\"</string>
  <string name="q5_etymology_detail">1915 in English cookery books, 1910 in travel books about Italy as an Italian word (defined as \"an odd kind of little squash, very tender and palatable\"), from Italian, plural of <i>zucchino</i>, diminutive of <i>zucca</i> \"gourd, squash\"</string>
  <string name="q6_etymology_detail">1753, earlier <i>tomate</i> (c. 1600), from Spanish <i>tomate</i> (mid-16c.) from Nahuatl (Aztecan) <i>tomatl</i> \"a tomato,\" said to mean literally \"the swelling fruit,\" from <i>tomana</i>  \"to swell\"</string>
  <string name="q7_etymology_detail">in early use also <i>cachou</i>, etc., \"the cashew tree, or its edible nut,\" 1703, a shortening of French <i>acajou</i>, from older Portuguese <i>acajú</i> from Tupi (Brazil) <i>acajuba</i>, name of the tree that produces the nut.</string>
  <string name="q8_etymology_detail">Old English <i>cyse</i> (West Saxon), <i>cese</i> (Anglian) \"cheese,\" from West Germanic *<i>kasjus</i>  (source also of Old Saxon <i>kasi</i> , Old High German <i>chasi</i> , German <i>Käse</i> , Middle Dutch <i>case</i> , Dutch <i>kaas</i>  ), from Latin <i>caseus</i> \"cheese\"</string>
  <string name="q9_etymology_detail">1904, from Modern Latin (1858), named for Scotland-born chemist Dr. John Macadam, secretary of the Victoria Philosophical Institute, Australia, + abstract noun ending -ia.</string>
  <string name="q10_etymology_detail">c. 1400 (late 13c. as a surname), from Anglo-French <i>spinache</i>, Old French <i>espinache</i> (14c., Modern French <i>épinard</i>, from a form with a different suffix), from Old Provençal <i>espinarc</i>, which perhaps is via Catalan <i>espinac</i>, from Andalusian Arabic <i>isbinakh</i>, from Arabic <i>isbanakh</i>, from Persian <i>aspanakh</i> \"spinach\"</string>
  <string name="score_statement">You got <xliff:g name="total_score">%d</xliff:g> out of 10 questions right!</string>
  <string name="score_statement_10outof10">Bravo! You are an expert food etymologist!</string>
  <string name="score_statement_greaterthan5">You passed!</string>
  <string name="content_description_welcome_screen">Cabbage</string>
  <string name="start">Start</string>
  <string name="your_name">Your name</string>
  <string name="default_user_name">Anonymous</string>
  <string name="question_number_q1">1</string>
  <string name="question_number_q2">2</string>
  <string name="question_number_q3">3</string>
  <string name="question_number_q4">4</string>
  <string name="question_number_q5">5</string>
  <string name="question_number_q6">6</string>
  <string name="question_number_q7">7</string>
  <string name="question_number_q8">8</string>
  <string name="question_number_q9">9</string>
  <string name="question_number_q10">10</string>
  <string name="copyright_statement">Online Etymology Dictionary, ©2010 Douglas Harper</string>
</resources>